@@ -4,6 +4,7 @@ Unreleased:
 - Windows 32-bit build has been removed
 - Linux deb & rpm packages now correctly specify Java 11 dependency, not 8
 - Mac: display a notification if java not in PATH #279
+- If scanning a local network, then ARP will be used in addition to chosen Pinger to detect more hosts #280
 
 Changes in 3.8.1:
 - Make 32-bit Windows build still run under Oracle Java 8 - it seems to still be popular #324
